2014-11-19  Roland McGrath  <roland@hack.frob.com>

	* nptl/pthread_create.c (__pthread_create_2_1): Don't try to validate
	the sched_priority value here.  It was already checked when the user
	called pthread_attr_setschedparam.

	* nptl/tst-bad-schedattr.c: New file.
	* nptl/Makefile (tests): Add it.

2014-11-19  Carlos O'Donell  <carlos@redhat.com>
	    Florian Weimer  <fweimer@redhat.com>
	    Joseph Myers  <joseph@codesourcery.com>
	    Adam Conrad  <adconrad@0c3.net>
	    Andreas Schwab  <schwab@suse.de>
	    Brooks  <bmoses@google.com>

	[BZ #17625]
	* wordexp-test.c (__dso_handle): Add prototype.
	(__register_atfork): Likewise.
	(__app_register_atfork): New function.
	(registered_forks): New global.
	(register_fork): New function.
	(test_case): Add 3 new tests for WRDE_CMDSUB.
	(main): Call __app_register_atfork.
	(testit): If WRDE_NOCMD set registered_forks to zero, run test, and if
	fork count is non-zero fail the test.
	* posix/wordexp.c (exec_comm): Return WRDE_CMDSUB if WRDE_NOCMD flag
	is set.
	(parse_dollars): Remove check for WRDE_NOCMD.
	(parse_dquote): Likewise.

2014-11-19  Siddhesh Poyarekar  <siddhesh@redhat.com>

	* Makeconfig (built-modules): List non-library modules to be
	built.
	(module-cppflags): Include libc-modules.h for
	everything except shlib-versions.v.i.
	(CPPFLAGS): Use it.
	(before-compile): Add libc-modules.h.
	($(common-objpfx)libc-modules.h,
	$(common-objpfx)libc-modules.stmp): New targets.
	(common-generated): Add libc-modules.h and libc-modules.stmp.
	($(common-objpfx)Versions.v.i): Depend on libc-modules.h.
	* include/libc-symbols.h: Don't include libc-modules.h.
	* include/libc-modules.h: Remove file.
	* scripts/gen-libc-modules.awk: New script to generate
	libc-modules.h.
	* sysdeps/unix/Makefile ($(common-objpfx)sysd-syscalls):
	Depend on libc-modules.stmp.

	* include/shlib-compat.h (_SHLIB_COMPAT): Use IS_IN.

	* Makeconfig (in-module): Get value of libof set for the
	translation unit.
	(CPPFLAGS): Use $(in-module).